<resources>
    <string name="app_name">DoHit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_date">Created At: %s</string>
    <string name="task_board">Task Board</string>
    <string name="task_description">Task Description</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="task_category">Task Category</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="taskTitle">Task Name</string>
    <string name="task_completed">Task Completed</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_task">Save Task</string>
    <string name="task_image">Task Image</string>
    <string name="task_image_description">Task Image</string>
    <string name="error_empty_fields_title">Please enter a title for the task! </string>
    <string name="error_empty_fields_description">Please enter a description for the task!</string>
    <string name="error_empty_fields_category">Please choose a description for the task!</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="future_mail">Future Mail…</string>
    <string name="tasks_completed">Tasks Completed:</string>
    <string name="ongoing_tasks">Ongoing Tasks:</string>
    <string name="highest_streak">Highest Streak:</string>
    <string name="home">Home</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="my_tasks">My Tasks</string>
    <string name="profile_home">Profile</string>
    <string name="prof_home_pic">prof_home_pic</string>
    <string name="my_tasks_home_icon">my_tasks_home_icon</string>
    <string name="settings_home_icon">settings_home_icon</string>
    <string name="home_icon" />
    <string name="username">Hi, Idan!</string>
    <string name="good_morning">Good Morning</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_schedule_your_nprojects">Let\'s Schedule your\nprojects</string>
    <string name="ongoing_project">Ongoing Project:</string>
    <string name="educationc">Education</string>
    <string name="folder_image">Folder Image</string>
    <string name="hobbies">Hobbies</string>
    <string name="sport">Sport</string>
    <string name="work">Work</string>
    <string name="money">Money</string>
    <string name="urgent">Urgent!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="task_title">Task Title</string>
    <string name="task_description1">Task Description</string>
    <string name="task_header">Create New Task</string>
    <string name="back_button">back button \n</string>
    <string name="category">Category: %1$s</string>
    <string name="error_image_not_found">Image Not Found!</string>
    <string name="search">Search</string>
    <string name="english">English</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="edit_profile_picture">Edit Profile picture</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="unknown_category">Unknown Category</string>
    <string name="unknown_category_he">קטגוריה לא ידועה</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_confirmation">Are you sure toy want to delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="category_image">Category Image</string>
    <string name="start_time">Start Time: %s</string>
    <string name="end_time">End Time: %s</string>
    <string name="start_date">Starting Date</string>
    <string name="select_start_date">Starting Date</string>
    <string name="starting_time">Start Time</string>
    <string name="select_start_time">Starting Time</string>
    <string name="end_date">Due Date</string>
    <string name="select_end_date">Due Date</string>
    <string name="ending_time">End Time</string>
    <string name="select_end_time">Ending Time</string>
    <string name="good_night">Good Night</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="due_date_label">Due Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="end_date_label">End Date</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="start_end_validation_error">End date and time cannot be before start date and time!</string>
    <string name="coming_soon">Coming soon :)</string>


</resources>