<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- קונטיינר עליון -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/dark_purple"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- חץ חזור -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back_button"
                android:background="@null"
                android:layout_marginStart="16dp" />

            <!-- כותרת -->
            <TextView
                android:id="@+id/top_text"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/task_header"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>




    <!-- תוכן טופס -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskNameLabel"
                android:text="@string/taskTitle"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="40dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/edit_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:padding="12dp"
                android:autofillHints=""
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/enter_task_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_description"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/edit_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_task_description"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:minHeight="48dp"
                android:background="@drawable/edittext_bg"
                android:padding="12dp"/>



            <!-- קטגוריה -->
            <TextView
                android:id="@+id/textViewCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_category"
                android:textSize="16sp"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewCategoryTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_category" />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_date"
            android:textSize="16sp"
            android:textColor="@color/dark_purple"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />
        <!-- תאריך ושעת התחלה -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_start_date"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_purple"
                android:padding="12dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_start_time"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_purple"
                android:padding="12dp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_label"
            android:textSize="16sp"
            android:textColor="@color/dark_purple"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />
        <!-- תאריך ושעת סיום -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_end_date"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_purple"
                android:padding="12dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_end_time"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_purple"
                android:padding="12dp"
                android:layout_marginStart="8dp" />
        </LinearLayout>




        <!-- סטטוס משימה -->
            <CheckBox
                android:id="@+id/checkbox_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_completed"
                android:buttonTint="@color/dark_purple"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_image"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image_task"
                android:layout_width="match_parent"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/edittext_bg"
                android:layout_height="200dp"
                android:contentDescription="@string/task_image_description"
                android:layout_marginTop="8dp" />


            <!-- כפתור שמירה -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="22dp">

                <ImageButton
                    android:id="@+id/button_upload_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/add_image"
                    android:scaleType="centerInside"
                    android:background="@null"
                    android:contentDescription="@string/upload_image" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageButton
                    android:id="@+id/saveButton"
                    android:layout_width="104dp"
                    android:layout_height="104dp"
                    android:src="@drawable/add"
                    android:scaleType="centerInside"
                    android:background="@null"
                    android:contentDescription="@string/upload_image" />
            </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>
