<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/banner_bg"
    android:padding="16dp">

    <!-- תמונה של הקטגוריה -->
    <ImageView
        android:id="@+id/categoryImage"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/category_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop" />

    <!-- כותרת המשימה -->
    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textStyle="bold"
        android:textColor="@color/dark_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/categoryImage"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- תיאור המשימה -->
    <TextView
        android:id="@+id/taskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_description1"
        android:textColor="@color/dark_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/categoryImage"
        app:layout_constraintTop_toBottomOf="@id/taskTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
