<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <!-- תוכן קבוע מעל ה-RecyclerView -->
    <LinearLayout
        android:id="@+id/linearLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- כותרת ראשית -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/dark_purple"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- תת-כותרת -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:textColor="@color/dark_purple"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                android:layout_marginTop="8dp" />

            <!-- שדה חיפוש -->
            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/dark_bg"
                android:drawableStart="@drawable/search_icon4"
                android:drawablePadding="16dp"
                android:hint="@string/search"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                android:layout_marginTop="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- באנר -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/banner_bg">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome"
                android:textColor="@color/dark_purple"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_schedule_your_nprojects"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/pic_banner" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- כותרת מעל RecyclerView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/ongoing_project"
                android:textColor="@color/dark_purple"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <!-- ScrollView שמכיל רק את ה-RecyclerView -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintVertical_bias="0.692"
        android:paddingBottom="74dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="28dp" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
